--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,8 @@
 // Specific CSS for your home-page
+h2 {
+  font-family: 'Questrial', sans-serif;;
+  text-align: center;
+  font-size: 24px;
+  padding: 60px;
+  letter-spacing: 5px;
+}
