add button card show page

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -27,9 +27,10 @@
 
 }
 
-.btn {
+.btn-banner {
   margin-bottom: 130px;
-  color: white;
+  color: black;
+  font-weight: bold;
   font-family: 'Questrial', sans-serif;;
 
 }
