--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -2,16 +2,12 @@
   <div class="container">
     <h1>There's a drink for every mood or occasion.</h1>
 
-    <p>Change your life and learn to code at one of our campuses around the world.</p>
-    <a class="btn" href="#"><%= link_to "Add a new Coktail", new_cocktail_path, class: 'btn btn-light' %></a>
+    <p>Find your favorite cocktail recipes below, or add one.</p>
+    <a class="btn-banner" href="#"><%= link_to "Add a new Coktail", new_cocktail_path, class: 'btn btn-light' %></a>
     <p><i class="fas fa-angle-down" id="arrow"></i></p> 
 
   </div>
 </div>
-
-
-
-
 
 <h2>- COCKTAILS -</h2>
 <div class="cocktails-list">
