--- a/app/views/doses/new.html.erb
+++ b/app/views/doses/new.html.erb
@@ -2,7 +2,7 @@
 <div class="container" id="form">
   <div class="row" class="text-center">
     <div class="col-xs-12 col-sm-10 col-sm-offset-1">
-        <h1>Add a dose</h1>
+        <h1>Add ingredients and doses</h1>
         <%= simple_form_for [@cocktail, @dose] do |f| %>
           <%= f.association :ingredient %>
           <%= f.input :description %>
