--- a/app/assets/stylesheets/components/_card-detail.scss
+++ b/app/assets/stylesheets/components/_card-detail.scss
@@ -33,3 +33,11 @@
   align-items: flex-end;
 }
 
+.card-trip .card-trip-infos ul li a {
+  text-decoration: none;
+  color: #554C4C;
+}
+
+.card-trip .card-trip-infos ul li a:hover {
+  color: black;
+}
