--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,8 +1,6 @@
 
 <div class="container">
   <div class="row">
-<!--     <div class="col-xs-12 col-sm-10 col-sm-offset-1">
- -->
       <div class="card-trip">
       <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/greece.jpg" />
       <div class="card-trip-infos">
@@ -13,30 +11,23 @@
         <p>
           - <%= dose.ingredient.name %> : <%= dose.description %>
           <%= link_to dose_path(dose.cocktail_id), method: :delete, data: {
-              confirm: 'Are you sure?',
-              text: 'You won\'t be able to revert this!',
-              'confirm-button-text': 'Yes, delete it!',
-              'cancel-button-text': 'Cancel',
-              'sweet-alert-type': 'warning',
-              'confirm-button-color': 'rgb(126, 198, 76)',
-              'cancel-button-color': 'rgb(167,0,42)'
+              confirm: 'Are you sure?'
             } do %>
-            <span>Remove</span>
+            <span><i class="fas fa-times"></i></span>
           <% end %>
         </p>
         <% end %>
         </div>
           <ul class="list-unstyled">
-            <li><%= link_to "See all cocktails", cocktails_path %></li>
-            <li><%= link_to "Add ingredients", new_cocktail_dose_path(@cocktail) %></li>
+
+            <li><button type="button" class="btn btn-outline-secondary"><%= link_to "Add ingredients", new_cocktail_dose_path(@cocktail) %></button>
+            </li>
+
+            <li><button type="button" class="btn btn-outline-secondary"><%= link_to "See all cocktails", cocktails_path %></button>
+            </li>
           </ul>
-        </div>
-
-        
-
+        </div>      
         </div>
       </div>
-
-<!--     </div> -->
   </div>
 </div>
