--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -10,7 +10,7 @@
       <% @cocktail.doses.each do |dose| %>
         <p>
           - <%= dose.ingredient.name %> : <%= dose.description %>
-          <%= link_to dose_path(dose.cocktail_id), method: :delete, data: {
+          <%= link_to dose_path(dose), method: :delete, data: {
               confirm: 'Are you sure?'
             } do %>
             <span><i class="fas fa-times"></i></span>
