--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -15,7 +15,7 @@
       <div class="row">
         <% @cocktails.each do |cocktail| %>
           <div class="col-xs-12 col-sm-6 col-md-4">
-            <div class="card-category">
+            <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('<%= cl_image_path cocktail.photo %>')">
                 <h2 id="cocktail-name"><%= link_to cocktail.name, cocktail_path(cocktail) %></h2>
               </div>
           </div>
@@ -24,4 +24,3 @@
     </div>
   </div>
 </div>
-
