--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -15,9 +15,15 @@
       <div class="row">
         <% @cocktails.each do |cocktail| %>
           <div class="col-xs-12 col-sm-6 col-md-4">
-            <div class="card-category ">
+            <% if cocktail.photo.presence.nil? %>
+            <div class="card-category " style="background-image: url(https://res.cloudinary.com/ddllhchge/image/upload/v1574392928/samples/animals/reindeer.jpg)">
                 <h2 id="cocktail-name"><%= link_to cocktail.name, cocktail_path(cocktail) %></h2>
-              </div>
+            </div>
+            <% else %>
+            <div class="card-category " style="background-image: url(<%= cl_image_path cocktail.photo %>)">
+                <h2 id="cocktail-name"><%= link_to cocktail.name, cocktail_path(cocktail) %></h2>
+            </div>
+            <% end %>
           </div>
         <% end %>
       </div>
