--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -5,7 +5,7 @@
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
   font-size: 32px;
   font-weight: bold;
-  font-family: 'Questrial', sans-serif;;
+  font-family: 'Questrial', sans-serif;
 }
 
 .banner p {
@@ -14,7 +14,7 @@
   opacity: .7;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
   padding: 70px;
-  font-family: 'Questrial', sans-serif;;
+  font-family: 'Questrial', sans-serif;
 }
 
 .banner {
@@ -31,7 +31,7 @@
   margin-bottom: 130px;
   color: black;
   font-weight: bold;
-  font-family: 'Questrial', sans-serif;;
+  font-family: 'Questrial', sans-serif;
 
 }
 
